--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
     "axios": "^0.18.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.12.0",
     "react-native": "^0.61.4",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
