--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
+    "auth0-js": "^9.12.2",
     "axios": "^0.18.1",
     "classnames": "^2.2.6",
     "react": "^16.12.0",
